[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]
